chore: Update version to 2.4.1 in pom.xml and refactor conversation handling in BaseAgent